@@ -24,7 +24,9 @@
 
 #include <sys/types.h>
 #include <sys/param.h>
+#ifdef HAVE_SYS_STATVFS_H
 #include <sys/statvfs.h>
+#endif
 #include "openbsd-compat/sys-queue.h"
 #ifdef HAVE_SYS_STAT_H
 # include <sys/stat.h>
@@ -241,6 +243,7 @@ get_decode_stat(int fd, u_int expected_id, int quiet)
 	return(a);
 }
 
+#ifdef USE_STATVFS
 static int
 get_decode_statvfs(int fd, struct statvfs *st, u_int expected_id, int quiet)
 {
@@ -290,6 +293,7 @@ get_decode_statvfs(int fd, struct statvfs *st, u_int expected_id, int quiet)
 
 	return 0;
 }
+#endif
 
 struct sftp_conn *
 do_init(int fd_in, int fd_out, u_int transfer_buflen, u_int num_requests)
@@ -809,6 +813,7 @@ do_readlink(struct sftp_conn *conn, char *path)
 }
 #endif
 
+#ifdef USE_STATVFS
 int
 do_statvfs(struct sftp_conn *conn, const char *path, struct statvfs *st,
     int quiet)
@@ -834,6 +839,7 @@ do_statvfs(struct sftp_conn *conn, const char *path, struct statvfs *st,
 
 	return get_decode_statvfs(conn->fd_in, st, id, quiet);
 }
+#endif
 
 #ifdef notyet
 int
